--- a/TipTap/Home/Base.lproj/Main.storyboard
+++ b/TipTap/Home/Base.lproj/Main.storyboard
@@ -27,33 +27,6 @@
             <point key="canvasLocation" x="302" y="533"/>
         </scene>
         <!--View Controller-->
-        <scene sceneID="9Ts-lp-yGY">
-            <objects>
-                <viewController storyboardIdentifier="first" id="0ie-bc-EYw" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="wBu-vb-oHa">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="My Tiptap List" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nYU-3d-tJ8">
-                                <rect key="frame" x="133" y="323" width="109" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                        </subviews>
-                        <color key="backgroundColor" red="1" green="0.044980095079999997" blue="0.1399733074" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                        <constraints>
-                            <constraint firstItem="nYU-3d-tJ8" firstAttribute="centerY" secondItem="wBu-vb-oHa" secondAttribute="centerY" id="4EC-0i-1eC"/>
-                            <constraint firstItem="nYU-3d-tJ8" firstAttribute="centerX" secondItem="wBu-vb-oHa" secondAttribute="centerX" id="oAL-vv-5o2"/>
-                        </constraints>
-                        <viewLayoutGuide key="safeArea" id="Rzc-7e-h9T"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="LiT-cA-ySE" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="151" y="985"/>
-        </scene>
-        <!--View Controller-->
         <scene sceneID="5OD-QZ-cc2">
             <objects>
                 <viewController storyboardIdentifier="second" id="t3w-KY-UBE" sceneMemberID="viewController">
@@ -67,6 +40,14 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uki-0I-6JX">
+                                <rect key="frame" x="317" y="631" width="39" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="글쓰기"/>
+                                <connections>
+                                    <segue destination="nR4-w6-Z14" kind="show" id="oeq-Y7-mmq"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="0.88603192470000003" blue="0.50203183699999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
@@ -79,6 +60,14 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cCC-Vi-9E1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="852" y="856"/>
+        </scene>
+        <!--TTEditDiaryViewController-->
+        <scene sceneID="HPX-IM-go6">
+            <objects>
+                <viewControllerPlaceholder storyboardName="EditDiary" referencedIdentifier="TTEditDiaryViewController" id="nR4-w6-Z14" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="58o-Eo-ufn" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="851" y="1452"/>
         </scene>
         <!--TTSharedViewController-->
         <scene sceneID="Xtu-VP-YtH">
