--- a/TipTap/Home/Base.lproj/Main.storyboard
+++ b/TipTap/Home/Base.lproj/Main.storyboard
@@ -26,10 +26,10 @@
             </objects>
             <point key="canvasLocation" x="302" y="533"/>
         </scene>
-        <!--View Controller-->
+        <!--Today Diary View Controller-->
         <scene sceneID="5OD-QZ-cc2">
             <objects>
-                <viewController storyboardIdentifier="second" id="t3w-KY-UBE" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="second" id="t3w-KY-UBE" customClass="TTTodayDiaryViewController" customModule="TipTap" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Icp-0g-mDd">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -40,22 +40,48 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uki-0I-6JX">
-                                <rect key="frame" x="317" y="631" width="39" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="글쓰기"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mhh-At-LYw">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uki-0I-6JX">
+                                <rect key="frame" x="253" y="622" width="96" height="32"/>
+                                <state key="normal" image="writeButton"/>
                                 <connections>
                                     <segue destination="nR4-w6-Z14" kind="show" id="oeq-Y7-mmq"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vkh-yW-DkD">
+                                <rect key="frame" x="316" y="20" width="35" height="35"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="35" id="iAU-Yu-XF6"/>
+                                    <constraint firstAttribute="width" constant="35" id="qQJ-Gz-By0"/>
+                                </constraints>
+                                <state key="normal" image="setting"/>
+                                <connections>
+                                    <segue destination="bqT-8u-YcE" kind="show" id="1JK-xI-fWI"/>
                                 </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="0.88603192470000003" blue="0.50203183699999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
                             <constraint firstItem="nhn-Sl-s0X" firstAttribute="centerX" secondItem="Icp-0g-mDd" secondAttribute="centerX" id="34M-Kv-eVs"/>
+                            <constraint firstItem="g5j-a0-ZeO" firstAttribute="bottom" secondItem="mhh-At-LYw" secondAttribute="bottom" id="6fa-JU-PG0"/>
+                            <constraint firstItem="g5j-a0-ZeO" firstAttribute="trailing" secondItem="vkh-yW-DkD" secondAttribute="trailing" constant="24" id="K3q-61-Zcg"/>
+                            <constraint firstItem="g5j-a0-ZeO" firstAttribute="bottom" secondItem="uki-0I-6JX" secondAttribute="bottom" constant="13" id="M6h-yq-99a"/>
+                            <constraint firstItem="vkh-yW-DkD" firstAttribute="top" secondItem="g5j-a0-ZeO" secondAttribute="top" id="N65-tq-M8D"/>
+                            <constraint firstItem="g5j-a0-ZeO" firstAttribute="trailing" secondItem="mhh-At-LYw" secondAttribute="trailing" id="b6d-vy-cFZ"/>
+                            <constraint firstItem="mhh-At-LYw" firstAttribute="top" secondItem="Icp-0g-mDd" secondAttribute="top" id="bB8-0z-HNX"/>
+                            <constraint firstItem="g5j-a0-ZeO" firstAttribute="trailing" secondItem="uki-0I-6JX" secondAttribute="trailing" constant="26" id="q6E-Ec-90y"/>
+                            <constraint firstItem="mhh-At-LYw" firstAttribute="centerX" secondItem="Icp-0g-mDd" secondAttribute="centerX" id="saN-Ee-nPj"/>
                             <constraint firstItem="nhn-Sl-s0X" firstAttribute="centerY" secondItem="Icp-0g-mDd" secondAttribute="centerY" id="uGh-53-kNx"/>
+                            <constraint firstItem="mhh-At-LYw" firstAttribute="leading" secondItem="g5j-a0-ZeO" secondAttribute="leading" id="xd7-bg-Um2"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="g5j-a0-ZeO"/>
                     </view>
+                    <connections>
+                        <outlet property="postView" destination="mhh-At-LYw" id="utQ-Dn-YUm"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cCC-Vi-9E1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -75,7 +101,38 @@
                 <viewControllerPlaceholder storyboardName="SharedDiary" referencedIdentifier="TTSharedViewController" id="qiO-lE-Zd1" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="auI-uT-zoB" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1377" y="533"/>
+            <point key="canvasLocation" x="1394" y="533"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="xWV-sN-b3A">
+            <objects>
+                <viewController id="bqT-8u-YcE" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Cr2-vX-Du6">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="settingView" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wGU-ub-OgI">
+                                <rect key="frame" x="142.5" y="323" width="90" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="wGU-ub-OgI" firstAttribute="centerY" secondItem="Cr2-vX-Du6" secondAttribute="centerY" id="Knp-Hd-FAC"/>
+                            <constraint firstItem="wGU-ub-OgI" firstAttribute="centerX" secondItem="Cr2-vX-Du6" secondAttribute="centerX" id="ozi-dU-2I3"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="qTf-ia-Z0D"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="OrW-DJ-ETY" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1945" y="1009"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="setting" width="24" height="24"/>
+        <image name="writeButton" width="96" height="32"/>
+    </resources>
 </document>
