--- a/TipTap/Module/SharedDiary/SharedDiary.storyboard
+++ b/TipTap/Module/SharedDiary/SharedDiary.storyboard
@@ -22,15 +22,59 @@
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="EqW-ro-Ufx">
                                 <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" sectionInsetReference="safeArea" id="K0n-HT-A2H">
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="K0n-HT-A2H">
                                     <size key="itemSize" width="375" height="208"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="SharedDiaryCell" id="RMN-JY-nD4" customClass="TTSharedCollectionViewCell" customModule="TipTap" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="208"/>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="SharedDiaryCell" id="oJW-ba-M3A" customClass="TTSharedCollectionViewDiaryCell" customModule="TipTap" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NPJ-iD-caQ">
+                                                    <rect key="frame" x="8" y="8" width="359" height="631"/>
+                                                    <subviews>
+                                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="scroll" translatesAutoresizingMaskIntoConstraints="NO" id="bdE-Ag-BbT">
+                                                            <rect key="frame" x="109" y="578" width="141" height="32"/>
+                                                        </imageView>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OYP-Gp-6UG" userLabel="Title Label">
+                                                            <rect key="frame" x="161.5" y="22" width="35.5" height="17"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                    <color key="backgroundColor" red="0.98431372549999996" green="0.98431372549999996" blue="0.98431372549999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <color key="tintColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="bottom" secondItem="OYP-Gp-6UG" secondAttribute="bottom" constant="592" id="3xf-65-6bw"/>
+                                                        <constraint firstAttribute="bottom" secondItem="bdE-Ag-BbT" secondAttribute="bottom" constant="21" id="4Vz-S2-qiR"/>
+                                                        <constraint firstItem="bdE-Ag-BbT" firstAttribute="centerX" secondItem="NPJ-iD-caQ" secondAttribute="centerX" id="I8e-NT-KeB"/>
+                                                        <constraint firstItem="OYP-Gp-6UG" firstAttribute="centerX" secondItem="NPJ-iD-caQ" secondAttribute="centerX" id="fjz-W7-ExW"/>
+                                                    </constraints>
+                                                </view>
+                                            </subviews>
+                                        </view>
+                                        <color key="backgroundColor" red="0.98431372549999996" green="0.98431372549999996" blue="0.98431372549999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="bottomMargin" secondItem="NPJ-iD-caQ" secondAttribute="bottom" id="Ii6-MA-hIU"/>
+                                            <constraint firstItem="NPJ-iD-caQ" firstAttribute="leading" secondItem="oJW-ba-M3A" secondAttribute="leadingMargin" id="PGs-iI-a6i"/>
+                                            <constraint firstItem="NPJ-iD-caQ" firstAttribute="top" secondItem="oJW-ba-M3A" secondAttribute="topMargin" id="bbl-I9-ASB"/>
+                                            <constraint firstAttribute="trailingMargin" secondItem="NPJ-iD-caQ" secondAttribute="trailing" id="rrV-nN-KHC"/>
+                                        </constraints>
+                                        <size key="customSize" width="375" height="647"/>
+                                        <connections>
+                                            <outlet property="titleLabel" destination="OYP-Gp-6UG" id="dPH-3f-uGG"/>
+                                            <outlet property="view" destination="NPJ-iD-caQ" id="6oa-w6-PXd"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="SharedDiaryListCell" id="RMN-JY-nD4" userLabel="SharedDiaryListCell" customClass="TTSharedCollectionViewListCell" customModule="TipTap" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="647" width="375" height="208"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="208"/>
@@ -132,4 +176,7 @@
             <point key="canvasLocation" x="189.59999999999999" y="179.46026986506749"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="scroll" width="141" height="32"/>
+    </resources>
 </document>
