--- a/TipTap/Module/EditDiary/EditDiary.storyboard
+++ b/TipTap/Module/EditDiary/EditDiary.storyboard
@@ -31,13 +31,6 @@
                                     <constraint firstAttribute="height" constant="67" id="5K4-4w-UXm"/>
                                 </constraints>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Y3n-4e-X0d">
-                                <rect key="frame" x="151" y="318.5" width="73" height="30"/>
-                                <state key="normal" title="pick photo"/>
-                                <connections>
-                                    <action selector="pressedPickPhoto:" destination="UQu-jj-iLM" eventType="touchUpInside" id="33I-MW-zHG"/>
-                                </connections>
-                            </button>
                             <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YZE-7e-2Sp">
                                 <rect key="frame" x="150" y="39.5" width="75" height="50"/>
                                 <subviews>
@@ -59,26 +52,80 @@
                                     <constraint firstAttribute="height" constant="1" id="HPw-ku-M94"/>
                                 </constraints>
                             </view>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="AI1-w2-QJw">
+                                <rect key="frame" x="30" y="212" width="315" height="390"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ERn-0g-UpP">
+                                <rect key="frame" x="0.0" y="622" width="375" height="45"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MYZ-JM-0CT">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="1"/>
+                                        <color key="backgroundColor" red="0.59215686274509804" green="0.59215686274509804" blue="0.59215686274509804" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="1" id="tJn-Bp-YU0"/>
+                                        </constraints>
+                                    </view>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cve-ei-S9O">
+                                        <rect key="frame" x="10" y="2" width="40" height="40"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="40" id="7xG-Xn-dUe"/>
+                                            <constraint firstAttribute="width" constant="40" id="dqL-aC-2bL"/>
+                                        </constraints>
+                                        <state key="normal" image="gallery"/>
+                                        <connections>
+                                            <action selector="pressedPickPhoto:" destination="UQu-jj-iLM" eventType="touchUpInside" id="Rt5-I2-tR6"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="MYZ-JM-0CT" firstAttribute="top" secondItem="ERn-0g-UpP" secondAttribute="top" id="5Gq-QJ-Gsa"/>
+                                    <constraint firstAttribute="trailing" secondItem="MYZ-JM-0CT" secondAttribute="trailing" id="GAb-6P-8aP"/>
+                                    <constraint firstItem="cve-ei-S9O" firstAttribute="centerY" secondItem="ERn-0g-UpP" secondAttribute="centerY" id="Knq-en-yXk"/>
+                                    <constraint firstAttribute="height" constant="45" id="kAL-FQ-lEH"/>
+                                    <constraint firstItem="cve-ei-S9O" firstAttribute="leading" secondItem="ERn-0g-UpP" secondAttribute="leading" constant="10" id="mSg-XL-fsx"/>
+                                    <constraint firstItem="MYZ-JM-0CT" firstAttribute="leading" secondItem="ERn-0g-UpP" secondAttribute="leading" id="sby-4r-GLL"/>
+                                </constraints>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="당신의 TIPTAP을 기록하세요." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fv7-Oi-G3L">
+                                <rect key="frame" x="36" y="222" width="156" height="16"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                <color key="textColor" red="0.59215686274509804" green="0.59215686274509804" blue="0.59215686274509804" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="Y3n-4e-X0d" firstAttribute="centerX" secondItem="50A-cX-2w7" secondAttribute="centerX" id="2Zy-tv-lVM"/>
                             <constraint firstItem="YZE-7e-2Sp" firstAttribute="centerX" secondItem="50A-cX-2w7" secondAttribute="centerX" id="2hw-kC-xo2"/>
+                            <constraint firstItem="dhI-j2-qDw" firstAttribute="trailing" secondItem="AI1-w2-QJw" secondAttribute="trailing" constant="30" id="48A-SL-9eu"/>
+                            <constraint firstItem="ERn-0g-UpP" firstAttribute="bottom" secondItem="dhI-j2-qDw" secondAttribute="bottom" id="7Oa-PL-QWX"/>
+                            <constraint firstItem="fv7-Oi-G3L" firstAttribute="top" secondItem="AI1-w2-QJw" secondAttribute="top" constant="10" id="97r-rE-FA6"/>
                             <constraint firstItem="cqS-3q-plH" firstAttribute="leading" secondItem="dhI-j2-qDw" secondAttribute="leading" constant="20" id="9bL-vo-vwU"/>
                             <constraint firstItem="1Ha-Hl-udO" firstAttribute="top" secondItem="cqS-3q-plH" secondAttribute="bottom" constant="27" id="RhR-28-EeU"/>
                             <constraint firstItem="Zuz-z2-Jpu" firstAttribute="top" secondItem="dhI-j2-qDw" secondAttribute="top" id="Zqw-pC-kH1"/>
                             <constraint firstItem="1Ha-Hl-udO" firstAttribute="leading" secondItem="dhI-j2-qDw" secondAttribute="leading" constant="30" id="cvb-pk-qAr"/>
-                            <constraint firstItem="Y3n-4e-X0d" firstAttribute="centerY" secondItem="50A-cX-2w7" secondAttribute="centerY" id="hB7-QL-kGG"/>
+                            <constraint firstItem="AI1-w2-QJw" firstAttribute="leading" secondItem="dhI-j2-qDw" secondAttribute="leading" constant="30" id="eP1-9X-J5m"/>
                             <constraint firstItem="Zuz-z2-Jpu" firstAttribute="centerX" secondItem="50A-cX-2w7" secondAttribute="centerX" id="hkr-V5-yQi"/>
                             <constraint firstItem="YZE-7e-2Sp" firstAttribute="top" secondItem="Zuz-z2-Jpu" secondAttribute="bottom" constant="5" id="lXj-WH-nf2"/>
+                            <constraint firstItem="ERn-0g-UpP" firstAttribute="top" secondItem="AI1-w2-QJw" secondAttribute="bottom" constant="20" id="mRZ-Zh-qyB"/>
+                            <constraint firstItem="fv7-Oi-G3L" firstAttribute="leading" secondItem="AI1-w2-QJw" secondAttribute="leading" constant="6" id="mrv-oR-5Q0"/>
                             <constraint firstItem="cqS-3q-plH" firstAttribute="top" secondItem="YZE-7e-2Sp" secondAttribute="bottom" constant="12" id="mwQ-Gk-IMF"/>
+                            <constraint firstItem="ERn-0g-UpP" firstAttribute="leading" secondItem="dhI-j2-qDw" secondAttribute="leading" id="nLX-Dc-LbR"/>
+                            <constraint firstItem="AI1-w2-QJw" firstAttribute="top" secondItem="1Ha-Hl-udO" secondAttribute="bottom" constant="15" id="pef-D1-SOj"/>
                             <constraint firstItem="dhI-j2-qDw" firstAttribute="trailing" secondItem="cqS-3q-plH" secondAttribute="trailing" constant="20" id="uKp-x2-xZc"/>
+                            <constraint firstItem="dhI-j2-qDw" firstAttribute="trailing" secondItem="ERn-0g-UpP" secondAttribute="trailing" id="uMF-pA-fzB"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="dhI-j2-qDw"/>
                     </view>
                     <connections>
+                        <outlet property="accessoryBottomConst" destination="7Oa-PL-QWX" id="eqY-k9-eeZ"/>
+                        <outlet property="boardTextView" destination="AI1-w2-QJw" id="4YE-Ma-rEG"/>
                         <outlet property="dateLabel" destination="Zuz-z2-Jpu" id="sbb-WJ-o1h"/>
                         <outlet property="locationLabel" destination="dbk-yG-Ere" id="h7L-tN-d9e"/>
+                        <outlet property="placeHolderLabel" destination="fv7-Oi-G3L" id="isW-0Q-qM5"/>
                         <outlet property="travelPicture" destination="1Ha-Hl-udO" id="PIT-DO-FMA"/>
                     </connections>
                 </viewController>
@@ -88,6 +135,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="gallery" width="24" height="24"/>
         <image name="location" width="25" height="25"/>
     </resources>
 </document>
