정해현 [TipTap] - complete UI edit VC   			   working VIPER Detail VC

--- a/TipTap/Home/Base.lproj/Main.storyboard
+++ b/TipTap/Home/Base.lproj/Main.storyboard
@@ -48,7 +48,7 @@
                                 <rect key="frame" x="253" y="622" width="96" height="32"/>
                                 <state key="normal" image="writeButton"/>
                                 <connections>
-                                    <segue destination="nR4-w6-Z14" kind="show" id="oeq-Y7-mmq"/>
+                                    <segue destination="nR4-w6-Z14" kind="presentation" id="oeq-Y7-mmq"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vkh-yW-DkD">
